# SDL_PhysFS

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: FindPhysFS.cmake  FindSDL2.cmake  FindSDL3.cmake
example/: main.c
examples/: CMakeLists.txt  SDL_PhysFS_Example.c  SDL_physfs_example.c
include/: CMakeLists.txt  SDL_PhysFS.h  SDL_physfs.h
test/: CMakeLists.txt  SDL_PhysFS_Test.c  SDL_physfs_test.c
test/cmake/: FindPhysFS.cmake  FindSDL3.cmake
